--- a/internal/controller/web/templates/pages/login.html
+++ b/internal/controller/web/templates/pages/login.html
@@ -14,6 +14,9 @@
                 <input type="password" id="password" name="password" required>
                 <button type="submit" class="btn-accent" style="width:100%;margin-top:0.5rem">Login</button>
             </form>
+            {{if .SignupEnabled}}
+            <p style="text-align:center;margin-top:0.5rem;font-size:0.9rem">Don't have an account? <a href="/signup">Sign up</a></p>
+            {{end}}
         </article>
     </div>
 </div>
